# mpyc

./: .codecov.yml  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CITATION.bib  LICENSE  MANIFEST.in  NOTICE  README.md  junk.py  pyproject.toml  setup.cfg  setup.py
demos/: 4demos.ipynb  KaplanMeierSurvivalExplained.ipynb  OneWayHashChainsExplained.ipynb  PrefixOrExplained.ipynb  PrefixOrExplained.py  README.md  SecretSantaExplained.ipynb  SecretSantaExplained.py  SecureSortingNetsExplained.ipynb  Untitled.ipynb  aes.py  bnnmnist.py  cnnmnist.py  dsa.py  elgamal.py  helloworld.py  id3gini.py  indextounitvector.py  kmsurvival.py  lpsolver.py  lpsolverfxp.py  multilateration.py  multrunc.py  np-run-all.bat  np-run-all.sh  np_aes.py  np_bnnmnist.py  np_cnnmnist.py  np_id3gini.py  np_kmsurvival.py  np_lpsolver.py  np_lpsolverfxp.py  np_onewayhashchains.py  oneliners.py  onewayhashchains.py  ot.py  parallelsort.py  pseudoinverse.py  ridgeregression.py  run-all.bat  (+9 more)
docs/: README.md  basics.rst  cli.rst  conf.py  demos.rst  doc.bat  doc.sh  index.html  index.rst  install.rst  mpyc.__main__.html  mpyc.asyncoro.html  mpyc.bfield.html  mpyc.finfields.html  mpyc.fingroups.html  mpyc.gf2x.html  mpyc.gfpx.html  mpyc.gmpy.html  mpyc.html  mpyc.mpctools.html  mpyc.numpy.html  mpyc.pfield.html  mpyc.random.html  mpyc.rst  mpyc.runtime.html  mpyc.secgroups.html  mpyc.seclists.html  mpyc.sectypes.html  mpyc.statistics.html  mpyc.thresha.html
images/: MPyC_Logo.tex
mpyc/: README.md  __init__.py  __main__.py  asyncoro.py  bfield.py  finfields.py  fingroups.py  gf2x.py  gfpx.py  gmpy.py  mpctools.py  numpy.py  pfield.py  random.py  runtime.py  secgroups.py  (+5 more)
(+123 files in other folders)
